"Fixed the contact form not showing when scrolling to the bottom of the website"

--- a/style.css
+++ b/style.css
@@ -560,7 +560,7 @@ span{
 }
 
 .contact{
-    min-height: auto;
+    
     padding-bottom: 7rem;
 
 }
